--- a/src/Osmo.ConneX/Ui/ConneXNavigator.razor
+++ b/src/Osmo.ConneX/Ui/ConneXNavigator.razor
@@ -17,15 +17,15 @@
                         @foreach (var system in _systems?.Systems)
                         {
                             <MudTreeViewItem Text="@system.Entity.EntityName" 
-                                             OnDoubleClick="@(() => _goldenLayoutService.AddRoute("connex-handler", system.Entity.EntityName, new HandlerParameters(system.HandlerId)))"/>
+                                             OnDoubleClick="@(() => _goldenLayoutService.AddComponent("connex-handler", system.Entity.EntityName, new HandlerParameters(system.HandlerId)))"/>
                         }
                     }
                 </MudTreeViewItem>
                 <MudTreeViewItem Value='"Components"'>
-                    <MudTreeViewItem Text="Dashboard" OnDoubleClick="@(() => _goldenLayoutService.AddRoute("connex-dashboard", "ConneX Dashboard"))"/>
-                    <MudTreeViewItem Text="Record Ingester" OnDoubleClick="@(() => _goldenLayoutService.AddRoute("connex-record-ingester", "ConneX Record Ingester"))"/>
-                    <MudTreeViewItem Text="Device List" OnDoubleClick="@(() => _goldenLayoutService.AddRoute("connex-device-list", "Device List"))"/>
-                    <MudTreeViewItem Text="Job List" OnDoubleClick="@(() => _goldenLayoutService.AddRoute("connex-job-list", "Job List"))"/>
+                    <MudTreeViewItem Text="Dashboard" OnDoubleClick="@(() => _goldenLayoutService.AddComponent("connex-dashboard", "ConneX Dashboard"))"/>
+                    <MudTreeViewItem Text="Record Ingester" OnDoubleClick="@(() => _goldenLayoutService.AddComponent("connex-record-ingester", "ConneX Record Ingester"))"/>
+                    <MudTreeViewItem Text="Device List" OnDoubleClick="@(() => _goldenLayoutService.AddComponent("connex-device-list", "Device List"))"/>
+                    <MudTreeViewItem Text="Job List" OnDoubleClick="@(() => _goldenLayoutService.AddComponent("connex-job-list", "Job List"))"/>
                 </MudTreeViewItem>
             </MudTreeView>
         </MudItem>
