--- a/src/Osmo/Components/GoldenLayout.razor
+++ b/src/Osmo/Components/GoldenLayout.razor
@@ -26,7 +26,7 @@
     /// </summary>
     protected override void OnInitialized()
     {
-        LayoutService.OnAddRoute += AddComponent;
+        LayoutService.OnAddComponent += AddComponent;
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
