--- a/src/Osmo/Shared/MainLayout.razor
+++ b/src/Osmo/Shared/MainLayout.razor
@@ -28,10 +28,10 @@
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@ToggleDrawer" />
         <MudMenu Label="View" Dense="true">
             <MudMenu Label="ConneX">
-                <MudMenuItem Label="Dashboard" @onclick="@(() => _goldenLayoutService.AddRoute("connex-dashboard", "ConneX Dashboard"))" />
-                <MudMenuItem Label="Analyzer" @onclick="@(() => _goldenLayoutService.AddRoute("connex-analyzer", "ConneX Analyzer"))"  />
-                <MudMenuItem Label="Metrics" @onclick="@(() => _goldenLayoutService.AddRoute("connex-metrics", "ConneX Metrics"))"  />
-                <MudMenuItem Label="Messages" @onclick="@(() => _goldenLayoutService.AddRoute("connex-message-list", "ConneX Message List"))"  />
+                <MudMenuItem Label="Dashboard" @onclick="@(() => _goldenLayoutService.AddComponent("connex-dashboard", "ConneX Dashboard"))" />
+                <MudMenuItem Label="Analyzer" @onclick="@(() => _goldenLayoutService.AddComponent("connex-analyzer", "ConneX Analyzer"))"  />
+                <MudMenuItem Label="Metrics" @onclick="@(() => _goldenLayoutService.AddComponent("connex-metrics", "ConneX Metrics"))"  />
+                <MudMenuItem Label="Messages" @onclick="@(() => _goldenLayoutService.AddComponent("connex-message-list", "ConneX Message List"))"  />
             </MudMenu>
         </MudMenu>
         <MudSpacer />
