--- a/src/Osmo.ConneX/Ui/ConneXDashboard.razor
+++ b/src/Osmo.ConneX/Ui/ConneXDashboard.razor
@@ -20,7 +20,7 @@
                 <MudItem>
                     <MudPaper Outlined="true" Elevation="10" Height="400px" Width="400px" Class="p-2">
                         <div class="d-flex justify-content-center">
-                            <h4><a href="/connex/handler/@system.HandlerId">@system.Entity.EntityName</a></h4>
+                            <h4>@system.Entity.EntityName</h4>
                         </div>
 
                         <div>
